chore: add bridge network to standalone docker-compose configuration

--- a/dockers/examples/standalone/docker-compose.yaml
+++ b/dockers/examples/standalone/docker-compose.yaml
@@ -58,6 +58,7 @@ services:
         condition: service_healthy
 
 networks:
+  bridge:
   teable-standalone:
     name: teable-standalone-network
     driver: bridge
