--- a/dockers/examples/standalone/stack.env
+++ b/dockers/examples/standalone/stack.env
@@ -8,7 +8,7 @@ POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=POSTshockwave88*
 
 # App
-PUBLIC_ORIGIN=http://teable.hp-ne.us
+PUBLIC_ORIGIN=https://teable.hp-ne.us
 PRISMA_DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 PUBLIC_DATABASE_PROXY=127.0.0.1:42345
 
